# ChangeLog for dev-perl/Net-Daemon
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Daemon/ChangeLog,v 1.53 2007/11/10 14:10:23 drac Exp $

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Net-Daemon-0.43.ebuild:
  amd64 stable

  06 Oct 2007; Tom Gall <tgall@gentoo.org> Net-Daemon-0.43.ebuild:
  stable on ppc64

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Net-Daemon-0.43.ebuild:
  Stable on ppc.

  09 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  Net-Daemon-0.43.ebuild:
  Stable on sparc

  01 Aug 2007; Joshua Kinard <kumba@gentoo.org> Net-Daemon-0.43.ebuild:
  Stable on mips.

  29 Jul 2007; Raúl Porcel <armin76@gentoo.org> Net-Daemon-0.43.ebuild:
  alpha/ia64/x86 stable

  11 Jul 2007; Raúl Porcel <armin76@gentoo.org> Net-Daemon-0.41.ebuild:
  alpha/ia64/x86 stable

  07 Jul 2007; Tom Gall <tgall@gentoo.org> Net-Daemon-0.41.ebuild:
  stable on ppc64

  30 Jun 2007; Joshua Kinard <kumba@gentoo.org> Net-Daemon-0.41.ebuild:
  Stable on mips.

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Net-Daemon-0.41.ebuild:
  Marking sparc stable

*Net-Daemon-0.43 (25 Jun 2007)

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +Net-Daemon-0.43.ebuild:
  Version bump

*Net-Daemon-0.41 (24 May 2007)

  24 May 2007; Michael Cummings <mcummings@gentoo.org>
  +Net-Daemon-0.41.ebuild:
  Version bump

  12 May 2007; Joshua Kinard <kumba@gentoo.org> Net-Daemon-0.39.ebuild:
  Stable on mips.

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> Net-Daemon-0.39.ebuild:
  Stable on ppc64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Net-Daemon-0.39.ebuild:
  Stable on x86, bug #169152.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -Net-Daemon-0.37.ebuild, Net-Daemon-0.38.ebuild, Net-Daemon-0.39.ebuild:
  Ebuild maintenance

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Net-Daemon-0.39.ebuild:
  ppc stable

  17 Aug 2006; Michael Cummings <mcummings@gentoo.org>